--- a/css/sampa.css
+++ b/css/sampa.css
@@ -7,12 +7,13 @@ body {
   font-family: "Open Sans", Helvetica, Calibri, Verdana, "Sans Serif"; }
 
 a {
-  text-decoration: none;
-  border-bottom: 1px dotted #a2a2d6;
-  color: #383894; }
+  text-decoration: none; }
 
 a:hover {
   text-decoration: none; }
+
+h1 {
+  margin-top: 2em; }
 
 h2 {
   font-size: 2rem;
@@ -112,9 +113,6 @@ ul.project-people {
 
 /* Customize container */
 @media (min-width: 768px) {
-  .container {
-    /* max-width: 900px;*/ }
-
   .card-columns {
     -webkit-column-count: 3;
     -moz-column-count: 3;
@@ -211,11 +209,6 @@ ul.news {
   padding-left: 4%;
   position: relative; }
 
-/*@media (max-width:1280px) {
-    #pageHeader { 
-        padding-left: 4%; 
-    }
-}*/
 #title {
   font-size: 30pt;
   font-weight: 300;
